partial/force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>preAppraisal</fullName>
            </value>
            <value>
                <fullName>valuation</fullName>
            </value>
            <value>
                <fullName>paidValuation</fullName>
            </value>
            <value>
                <fullName>forSale</fullName>
            </value>
            <value>
                <fullName>forSaleUnavailable</fullName>
            </value>
            <value>
                <fullName>underOffer</fullName>
            </value>
            <value>
                <fullName>underOfferUnavailable</fullName>
            </value>
            <value>
                <fullName>reserved</fullName>
            </value>
            <value>
                <fullName>exchanged</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>soldExternally</fullName>
            </value>
            <value>
                <fullName>withdrawn</fullName>
            </value>
            <value>
                <fullName>tenancyCurrent</fullName>
            </value>
            <value>
                <fullName>toLet</fullName>
            </value>
            <value>
                <fullName>toLetUnavailable</fullName>
            </value>
            <value>
                <fullName>arrangingTenancyUnavailable</fullName>
            </value>
            <value>
                <fullName>arrangingTenancy</fullName>
            </value>
            <value>
                <fullName>tenancyCurrentUnavailable</fullName>
            </value>
            <value>
                <fullName>tenancyFinished</fullName>
            </value>
            <value>
                <fullName>tenancyCancelled</fullName>
            </value>
            <value>
                <fullName>sold</fullName>
            </value>
            <value>
                <fullName>letByOtherAgent</fullName>
            </value>
            <value>
                <fullName>letPrivately</fullName>
            </value>
            <value>
                <fullName>provisional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>