partial/force-app/main/default/objects/Opportunity/fields/Telephone_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Company_Id__c</fullName>
    <label>Telephone Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>