partial/force-app/main/default/objects/Opportunity/fields/Tenure_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Expiry__c</fullName>
    <label>Tenure Expiry</label>
    <type>DateTime</type>
</CustomField>