partial/force-app/main/default/objects/Opportunity/fields/Tenure_Type__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Type__c</fullName>
    <label>Tenure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>freehold</fullName>
            </value>
            <value>
                <fullName>leasehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>