partial/force-app/main/default/objects/Opportunity/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>