partial/force-app/main/default/objects/Opportunity/fields/Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>Unit_Id__c</fullName>
    <label>Unit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>