partial/force-app/main/default/objects/Opportunity/fields/UnitTypePreferences__c.field-meta.xml
<CustomField>
    <fullName>UnitTypePreferences__c</fullName>
    <label>Unit Type Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Type</valueSetName>
    </valueSet>
</CustomField>