partial/force-app/main/default/objects/Opportunity/fields/Valuation_Price__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Price__c</fullName>
    <label>Valuation Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>