partial/force-app/main/default/objects/Opportunity/fields/Visit_required__c.field-meta.xml
<CustomField>
    <fullName>Visit_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit required?</label>
    <type>Checkbox</type>
</CustomField>