partial/force-app/main/default/objects/Opportunity/fields/Water_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Water_Company_Id__c</fullName>
    <label>Water Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>