partial/force-app/main/default/objects/Opportunity/fields/Water_Meter_Point__c.field-meta.xml
<CustomField>
    <fullName>Water_Meter_Point__c</fullName>
    <label>Water Meter Point</label>
    <length>30</length>
    <type>Text</type>
</CustomField>