partial/force-app/main/default/objects/Opportunity/recordTypes/Buying.recordType-meta.xml
<RecordType>
    <fullName>Buying</fullName>
    <active>true</active>
    <businessProcess>Buying Process</businessProcess>
    <label>Buying UK</label>
</RecordType>