partial/force-app/main/default/objects/Opportunity/recordTypes/Instant_Valuation.recordType-meta.xml
<RecordType>
    <fullName>Instant_Valuation</fullName>
    <active>true</active>
    <businessProcess>Selling Process</businessProcess>
    <label>Instant Valuation</label>
</RecordType>