partial/force-app/main/default/objects/Opportunity/recordTypes/Letting_UK.recordType-meta.xml
<RecordType>
    <fullName>Letting_UK</fullName>
    <active>true</active>
    <businessProcess>Letting Process</businessProcess>
    <label>Rental UK</label>
</RecordType>