partial/force-app/main/default/objects/Opportunity/recordTypes/Primary_UK.recordType-meta.xml
<RecordType>
    <fullName>Primary_UK</fullName>
    <active>true</active>
    <businessProcess>Selling Process</businessProcess>
    <label>Primary Sell UK</label>
</RecordType>