partial/force-app/main/default/objects/Opportunity/recordTypes/Selling_UK.recordType-meta.xml
<RecordType>
    <fullName>Selling_UK</fullName>
    <active>true</active>
    <businessProcess>Selling Process</businessProcess>
    <label>Secondary Sell UK</label>
</RecordType>