partial/force-app/main/default/objects/Opportunity/recordTypes/Tenancy.recordType-meta.xml
<RecordType>
    <fullName>Tenancy</fullName>
    <active>true</active>
    <businessProcess>Tenancy Process</businessProcess>
    <label>Tenancy UK</label>
</RecordType>